--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <!-- Font Awesome  -->
+  <script src="https://kit.fontawesome.com/79f11f0381.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,7 +25,7 @@
 
 
   <footer>
-    Made with ❤️ by <a href="https://github.com/kgthree-kgthree">Gayathri.</a>
+    Made with ❤️ by <a class="footer-link" rel="noreferrer nofollow" target="_blank" href="https://github.com/kgthree-kgthree"><i class="footer-link fab fa-github fa-2x"> </i>Gayathri</a>
   </footer>
 
 <script src="index.js" charset="utf-8"></script>
